# kiro-buildfest-2026

./: .env.example  .gitignore  Cloud Janitor Blueprint.md  Makefile  README.md  SPEC_COMPLIANCE.md  app.py  docker-compose.yml  generate_spec_compliance.py  llm_client.py  orchestrator.py  pyproject.toml  requirements.txt  savings.py  scheduler.py  test_fixture.py  test_reasoning_panel_quick.py
.kiro/: AUDIT_REPORT.md
agents/: README.md  __init__.py  anomaly_detector.py  approval_gate.py  audit_logger.py  drift_detector.py  explainer.py  finops_auditor.py  incident_policy_generator.py  policy_suggester.py  query_interpreter.py  reasoning_logger.py  remediation_architect.py  schema_validator.py  secops_guard.py  tagger.py
core/: __init__.py  llm_client.py
fixtures/: README.md  aws_config_inspector.json
hooks/: post-remediation.sh  pre-remediation.sh
mcp_server/: aws_janitor_mcp.py
output/: README.md  remediation.tf
scripts/: __init__.py  generate_spec_compliance.py  setup-hooks.sh
tests/: README.md  test_anomaly_detector.py  test_approval_gate_store.py  test_aws_provider.py  test_backward_compatibility_properties.py  test_compliance_generator_properties.py  test_compliance_output_format.py  test_drift_detector_properties.py  test_error_states.py  test_explainer_properties.py  test_fixture_mode_integration.py  test_gate_integration.py  test_gate_lockout_props.py  test_gate_persistence.py  test_gate_persistence_props.py  test_incident_policy_generator.py  test_llm_client.py  test_malformed_line_resilience.py  test_mcp_interpret_query.py  test_orchestrator.py  (+20 more)
(+27 files in other folders)
